Java 2/homework 3/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.7.0_07\bin\javadoc.exe
-sourcepath
C:\Users\Matt\Documents\school stuff\Java 2\homework 3
-source
1.7
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\Matt\Documents\school stuff\Java 2\homework 3
-d
C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
-doctitle
homework 3
-windowtitle
homework 3
-author
-version
-nodeprecated
-package
-link
http://download.oracle.com/javase/6/docs/api/
Date
C:\Users\Matt\Documents\school stuff\Java 2\homework 3/Driver.java
C:\Users\Matt\Documents\school stuff\Java 2\homework 3/ParrotRecord.java
C:\Users\Matt\Documents\school stuff\Java 2\homework 3/Shape.java
C:\Users\Matt\Documents\school stuff\Java 2\homework 3/Record.java
C:\Users\Matt\Documents\school stuff\Java 2\homework 3/BudgieRecord.java
C:\Users\Matt\Documents\school stuff\Java 2\homework 3/DogRecord.java
C:\Users\Matt\Documents\school stuff\Java 2\homework 3/BirdRecord.java
C:\Users\Matt\Documents\school stuff\Java 2\homework 3/Printable.java
C:\Users\Matt\Documents\school stuff\Java 2\homework 3/Ageable.java
C:\Users\Matt\Documents\school stuff\Java 2\homework 3/CatRecord.java
C:\Users\Matt\Documents\school stuff\Java 2\homework 3/MammalRecord.java
<---- end of javadoc command ---->
Loading source file C:\Users\Matt\Documents\school stuff\Java 2\homework 3/Driver.java...
Loading source file C:\Users\Matt\Documents\school stuff\Java 2\homework 3/ParrotRecord.java...
Loading source file C:\Users\Matt\Documents\school stuff\Java 2\homework 3/Shape.java...
Loading source file C:\Users\Matt\Documents\school stuff\Java 2\homework 3/Record.java...
Loading source file C:\Users\Matt\Documents\school stuff\Java 2\homework 3/BudgieRecord.java...
Loading source file C:\Users\Matt\Documents\school stuff\Java 2\homework 3/DogRecord.java...
Loading source file C:\Users\Matt\Documents\school stuff\Java 2\homework 3/BirdRecord.java...
Loading source file C:\Users\Matt\Documents\school stuff\Java 2\homework 3/Printable.java...
Loading source file C:\Users\Matt\Documents\school stuff\Java 2\homework 3/Ageable.java...
Loading source file C:\Users\Matt\Documents\school stuff\Java 2\homework 3/CatRecord.java...
Loading source file C:\Users\Matt\Documents\school stuff\Java 2\homework 3/MammalRecord.java...
Loading source files for package Date...
Constructing Javadoc information...
C:\Users\Matt\Documents\school stuff\Java 2\homework 3\Record.java:2: error: package java.Date does not exist
 import java.Date.*;
 ^
C:\Users\Matt\Documents\school stuff\Java 2\homework 3\Record.java:32: error: cannot find symbol
       private Date[] ptdates;
               ^
  symbol:   class Date
  location: class Record
C:\Users\Matt\Documents\school stuff\Java 2\homework 3\Record.java:39: error: cannot find symbol
    public Record(String desig, int id, Date[] dates, String[]descript)
                                        ^
  symbol:   class Date
  location: class Record
Standard Doclet version 1.7.0_07
Building tree for all the packages and classes...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\Ageable.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\BirdRecord.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\BudgieRecord.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\CatRecord.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\DogRecord.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\Driver.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\MammalRecord.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\ParrotRecord.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\Printable.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\Record.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\Shape.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\Date\Date.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\overview-frame.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\package-frame.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\package-summary.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\package-tree.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\Date\package-frame.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\Date\package-summary.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\Date\package-tree.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\constant-values.html...
Building index for all the packages and classes...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\overview-tree.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\index-all.html...
Building index for all classes...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\allclasses-frame.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\allclasses-noframe.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\index.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\overview-summary.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\help-doc.html...
Generating C:\Users\Matt\Documents\school stuff\Java 2\homework 3\doc\stylesheet.css...
3 warnings
